--- a/Uh oh!/Base.lproj/Main.storyboard
+++ b/Uh oh!/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kWn-xZ-KJK">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
     </dependencies>
     <scenes>
@@ -322,7 +321,7 @@ Thank you!</string>
                         <barButtonItem key="rightBarButtonItem" systemItem="compose" id="Krx-eL-Zzf">
                             <color key="tintColor" red="1" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
-                                <segue destination="tmb-Y0-glb" kind="show" id="Yav-ne-DAh"/>
+                                <segue destination="tmb-Y0-glb" kind="show" identifier="segueTest" id="Yav-ne-DAh"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
