--- a/Uh oh!/Base.lproj/Main.storyboard
+++ b/Uh oh!/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kWn-xZ-KJK">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
     </dependencies>
     <scenes>
@@ -291,32 +290,26 @@ Thank you!</string>
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aJu-DW-ISz" userLabel="Panic">
-                                <rect key="frame" x="16" y="220" width="128" height="128"/>
-                                <state key="normal" image="Call friends.png">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="MakeCall:" destination="vXZ-lx-hvc" eventType="touchDown" id="rmQ-Ps-agC"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rfL-75-neR" userLabel="Worry">
-                                <rect key="frame" x="179" y="220" width="128" height="128"/>
-                                <state key="normal" image="Info settings.png">
+                                <rect key="frame" x="16" y="220" width="128" height="128"/>
+                                <state key="normal" image="chat-128.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="Worry:" destination="vXZ-lx-hvc" eventType="touchDown" id="ZQE-YL-aej"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KeQ-5o-5L3">
-                                <rect key="frame" x="16" y="370" width="281" height="178"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aJu-DW-ISz" userLabel="Panic">
+                                <rect key="frame" x="184" y="220" width="128" height="128"/>
+                                <state key="normal" image="missed_call-128.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="MakeCall:" destination="vXZ-lx-hvc" eventType="touchDown" id="rmQ-Ps-agC"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Main" id="Lgc-wS-r9b">
                         <barButtonItem key="rightBarButtonItem" systemItem="compose" id="Krx-eL-Zzf">
@@ -332,7 +325,6 @@ Thank you!</string>
                         <size key="landscapeSize" width="568" height="320"/>
                     </simulatedScreenMetrics>
                     <connections>
-                        <outlet property="curLocation" destination="KeQ-5o-5L3" id="bQK-Je-6Jh"/>
                         <outlet property="panicButton" destination="aJu-DW-ISz" id="Z6f-ZG-wIH"/>
                         <outlet property="worryButton" destination="rfL-75-neR" id="Q1B-0X-VVs"/>
                     </connections>
@@ -366,7 +358,7 @@ Thank you!</string>
         </scene>
     </scenes>
     <resources>
-        <image name="Call friends.png" width="512" height="512"/>
-        <image name="Info settings.png" width="512" height="512"/>
+        <image name="chat-128.png" width="128" height="128"/>
+        <image name="missed_call-128.png" width="128" height="128"/>
     </resources>
 </document>
