--- a/Uh oh!/Base.lproj/Main.storyboard
+++ b/Uh oh!/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kWn-xZ-KJK">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
     </dependencies>
     <scenes>
@@ -246,22 +247,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5oQ-xE-Abk">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5oQ-xE-Abk">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="1079"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <attributedString key="attributedText">
-                                    <fragment>
-                                        <string key="content">Facebook Hack
-Richard
-Benno
-
-Thank you!</string>
-                                        <attributes>
-                                            <font key="NSFont" size="14" name="HelveticaNeue"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
+                                <mutableString key="text">About the app 
+Uh oh! was built as part of the InterTech and 
+FaceBook LGBT+ 2014 'Make Stuff Better' 
+hackathon in London.  
+ It was created in 24 hours (so there are a few feature enhancements we have yet to complete) by:  
+Benno Ommerborn  
+Joseph Finlayson 
+Louise Franklin 
+Justin King-Lacroix 
+Richard Matheson 
+Liudas Survila 
+ How it works 
+ Uh oh! is designed to help keep you safe when you might be feeling vulnerable, particularly walking home alone at night.  
+ After you first install Uh oh! go to Settings 
+where you can programme in the phone numbers of three of your friends or family who you would like to contact if you feel unsafe. The app then works by offering you two levels of service: 
+1. Talk To Me: Select the amber speech icon and be guided through a simulated conversation 
+while your GPS position is recorded, just in case something should happen. The idea of this is 
+to keep you talking and calm, making any potential unfriendlies believe you are on the 
+phone and therefore less of a target.  
+ 2. Call My Friends: Select the red call icon to directly alert and call three of your friends or family. When this option is selected the app will automatically send an sms message to all three of your listed friends and call your friends in turn until one answers. If they don't answer it will default to the Talk To Me simulated conversation.  
+Once you are feeling safe again, you will be asked to use the Cancel button in the app. This will hang - up the simulated call or, if you used the Call My Friends option, will send your friends a second sms message to confirm that you are now safe. What data gets sent when I use the app?
+Whenever you use Uh oh! your phone will send your GPS position to our central server along 
+with your phone number and the number of your friends. If you don’t select to Call My Friends, 
+nothing will be done with this individual data and 
+it will be cleansed from our database on a regular 
+basis – we do keep it for a little bit, just in cas
+e!  
+The only information we retain are the co-ordinate 
+positions where people have used the app, 
+without any other unique identifiers. We then map t
+hese on an ongoing basis to highlight areas 
+where users feel particularly vulnerable, so that t
+hey can be avoided or issues raised with local 
+authorities. </mutableString>
+                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
