--- a/Uh oh!/Base.lproj/Main.storyboard
+++ b/Uh oh!/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kWn-xZ-KJK">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
     </dependencies>
     <scenes>
@@ -17,7 +16,7 @@
                         <sections>
                             <tableViewSection headerTitle="Friend1" id="sDi-gp-ARZ">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="jEN-hA-yyS">
+                                    <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="jEN-hA-yyS">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jEN-hA-yyS" id="RDg-Yc-fFY">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -47,7 +46,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="dHY-q3-26Q">
+                                    <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="dHY-q3-26Q">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dHY-q3-26Q" id="Gbq-0N-GbO">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -81,7 +80,7 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="Friend2" id="mGs-V9-PGd">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="9Oe-RE-Gyv">
+                                    <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="9Oe-RE-Gyv">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9Oe-RE-Gyv" id="wuX-kP-gOv">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -95,11 +94,12 @@
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" allowsEditingTextAttributes="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x7X-5b-SjB" userLabel="NameFriend2">
                                                     <rect key="frame" x="70" y="6" width="203" height="30"/>
                                                     <attributedString key="attributedText">
-                                                        <fragment content="Richard">
+                                                        <fragment content="Louise">
                                                             <attributes>
-                                                                <color key="NSColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                                 <font key="NSFont" size="14" name="HelveticaNeue"/>
-                                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" defaultTabInterval="36">
+                                                                    <tabStops/>
+                                                                </paragraphStyle>
                                                             </attributes>
                                                         </fragment>
                                                     </attributedString>
@@ -119,7 +119,7 @@
                                             </attributedString>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="cwr-Q0-lm6">
+                                    <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="cwr-Q0-lm6">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cwr-Q0-lm6" id="t9d-9V-WRi">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -133,7 +133,7 @@
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" allowsEditingTextAttributes="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9SJ-nx-NPc" userLabel="PhoneNumFriend2">
                                                     <rect key="frame" x="134" y="8" width="267" height="30"/>
                                                     <attributedString key="attributedText">
-                                                        <fragment content="+447477973182">
+                                                        <fragment content="+4428254224400">
                                                             <attributes>
                                                                 <color key="NSColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                                 <font key="NSFont" size="14" name="HelveticaNeue"/>
@@ -161,7 +161,7 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="Friend3" id="wRf-yl-tUJ">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="vxX-xh-EQL">
+                                    <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="vxX-xh-EQL">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vxX-xh-EQL" id="5au-q7-v2F">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -175,7 +175,7 @@
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c3V-6Z-1zi" userLabel="NameFriend3">
                                                     <rect key="frame" x="70" y="11" width="236" height="30"/>
                                                     <attributedString key="attributedText">
-                                                        <fragment content="Benno">
+                                                        <fragment content="Joseph">
                                                             <attributes>
                                                                 <color key="NSColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                                 <font key="NSFont" size="14" name="HelveticaNeue"/>
@@ -191,7 +191,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="zYM-9J-qz6">
+                                    <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="zYM-9J-qz6">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zYM-9J-qz6" id="671-de-pkF">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -205,9 +205,8 @@
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FTE-dR-YW8" userLabel="PhoneNumFriend3">
                                                     <rect key="frame" x="136" y="8" width="267" height="30"/>
                                                     <attributedString key="attributedText">
-                                                        <fragment content="+447477973182">
+                                                        <fragment content="+447967965870">
                                                             <attributes>
-                                                                <color key="NSColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                                 <font key="NSFont" size="14" name="HelveticaNeue"/>
                                                                 <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
                                                             </attributes>
@@ -230,7 +229,8 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Preferences" id="LoS-TL-CN7">
-                        <barButtonItem key="rightBarButtonItem" systemItem="organize" id="PFF-Pp-b5Z">
+                        <barButtonItem key="rightBarButtonItem" image="info-25.png" id="PFF-Pp-b5Z">
+                            <color key="tintColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="0.45000000000000001" colorSpace="calibratedRGB"/>
                             <connections>
                                 <segue destination="fOL-sg-8g3" kind="show" id="OLb-IV-xRX"/>
                             </connections>
@@ -252,7 +252,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Ih-f8-Z0D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="826" y="135"/>
+            <point key="canvasLocation" x="826" y="142"/>
         </scene>
         <!--About-->
         <scene sceneID="jfk-yV-zZk">
@@ -332,8 +332,8 @@ Thank you!</string>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Main" id="Lgc-wS-r9b">
-                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="Krx-eL-Zzf">
-                            <color key="tintColor" red="1" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <barButtonItem key="rightBarButtonItem" image="settings_filled-25.png" id="Krx-eL-Zzf">
+                            <color key="tintColor" red="0.60000002384185791" green="0.60000002384185791" blue="0.60000002384185791" alpha="0.45000000000000001" colorSpace="calibratedRGB"/>
                             <connections>
                                 <segue destination="tmb-Y0-glb" kind="show" identifier="segueTest" id="Yav-ne-DAh"/>
                             </connections>
@@ -379,6 +379,8 @@ Thank you!</string>
     </scenes>
     <resources>
         <image name="chat-128.png" width="128" height="128"/>
+        <image name="info-25.png" width="25" height="25"/>
         <image name="missed_call-128.png" width="128" height="128"/>
+        <image name="settings_filled-25.png" width="25" height="25"/>
     </resources>
 </document>
