--- a/Uh oh!/Base.lproj/Main.storyboard
+++ b/Uh oh!/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kWn-xZ-KJK">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
     </dependencies>
     <scenes>
@@ -320,7 +321,7 @@ authorities. </string>
             </objects>
             <point key="canvasLocation" x="1256" y="135"/>
         </scene>
-        <!--Main-->
+        <!--Uh Oh!-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Uh_oh_" customModuleProvider="target" sceneMemberID="viewController">
@@ -365,7 +366,7 @@ authorities. </string>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Main" id="Lgc-wS-r9b">
+                    <navigationItem key="navigationItem" title="Uh Oh!" id="Lgc-wS-r9b">
                         <barButtonItem key="rightBarButtonItem" image="settings_filled-25.png" id="Krx-eL-Zzf">
                             <color key="tintColor" red="0.60000002384185791" green="0.60000002384185791" blue="0.60000002384185791" alpha="0.45000000000000001" colorSpace="calibratedRGB"/>
                             <connections>
